Backend/smartek_sponsor/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartek-production
  labels:
    name: smartek-production
    environment: production
    team: smartek
